[package]
name = "ptv"
version = "0.1.0"
authors = ["James Lee <jbit@jbit.net>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Unofficial Rust library for accessing the Public Transport Victoria Timetable API"
keywords = ["api", "async", "http", "australia", "transit"]
categories = ["api-bindings"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
hmac             = { version = "0.12.1" }
http             = { version = "0.2.9" }
serde            = { version = "1.0.171", features = ["derive"] }
serde_html_form  = { version = "0.2.1" }
serde_json       = { version = "1.0.103" }
sha1             = { version = "0.10.5" }
time             = { version = "0.3.23", features = ["serde", "formatting", "parsing"] }
url              = { version = "2.4.0" }
percent-encoding = { version = "2.3.0" }

reqwest          = { version = "0.11.18", optional = true }

[dev-dependencies]
tokio = { version = "1.29", features = ["macros", "rt"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
